# list_prediction_motion_planning

./: README.md  dataset_format_info.txt  info.txt  init_setup.m
analysis/: plot_list_trajectories.m  plot_list_trajectories.m~
box_qp/: CMakeLists.txt  README
box_qp/example/: minqp_d_bc1.cpp  read_from_file.cpp
chomp/: init_setup.m
chomp/CHOMP/: CHOMP.m  cost_obs.m  cost_smooth.m  covariant_gradient_descent.m  cross_entropy_chomp.m  grad_fn_arc_length.m  gradient_obs.m  gradient_smooth.m  smooth_matrices.m
chomp/examples/: example_chomp_fixed_wing.m  example_created_map.m  example_dataset.m  (+7 more)
clustering/: init_setup.m
cs_classification/: init_setup.m
dataset_creation/: create_cost_feature_set.m  create_dataset.m  create_library.m  create_original_cost.m  create_raw_evaluated.m  generate_features.m  generate_features_library.m  greedy_library_creation.m  plot_optimized_trajectories.m  tmp_test
feature_extraction/: get_signed_distance_features.m  get_simple_features.m
function_matching/: gen_rand_functions.m  plot_pp.m  plot_ranked_validation.m  pp_database.mat  rand_function.m  test_brute_matching.m  viz_cost_map.m  viz_top_matches.m
matlab_cost_functions/: init_setup.m
matlab_environment_generation/: init_setup.m
ranking/: init_setup.m
results/: clusteering.txt  lin_reg_res.txt  ranking.txt  ranking_front5.txt  ranking_frontvsback.txt  ranking_onevsrem.txt
scp/: init_setup.m
utils/: evaluate_list_prediction.m  evaluate_prediction.m  gen_struct_fields_to_vars_code.m  get_dumb_baseline.m  optimize_library.m  stagewise_evaluate_list_prediction.m
(+239 files in other folders)
